# pspf_demo

./: README.md  docker-compose.yml  test_ws.py
backend/: .gitignore  Dockerfile  README.md  database.py  init_db.py  pyproject.toml  test_http.py  test_http_ws.py  test_ws_ipv4.py
backend/api/: main.py  worker.py
backend/api/routers/: orders.py  products.py  websocket.py
backend/config/: settings.py
backend/models/: __init__.py  base.py  inventory.py  orders.py  suppliers.py
backend/processors/: alerts.py  analytics.py  audit.py  inventory.py  orders.py  restock.py
backend/services/: analytics.py  inventory.py  orders.py
backend/streams/: client.py  dependencies.py  events.py  schemas.py
docs/: architecture.md  pipelines.md
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: Dashboard.tsx  StatCard.tsx
frontend/src/hooks/: useWebSocket.ts
scripts/: generate_demo_data.py  init_db.py
simulator/: main.py  requirements.txt
