[project]
name = "streamstock-backend"
version = "0.1.0"
description = "Backend for StreamStock - PSPF Reference Implementation"
authors = [
    {name = "StreamStock Team", email = "dev@streamstock.io"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",  # For Valkey
    "valkey>=0.1.0", # Required by PSPF
    "python-multipart>=0.0.6",
    # PSPF Dependencies
    "aiofiles>=23.0.0",
    "msgpack>=1.0.0",
    "protobuf>=4.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "typer>=0.9.0",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.280",
    "black>=23.7.0",
    "httpx>=0.24.1",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
